syntax = "proto3";

package ecommerce;
option java_multiple_files = true;

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order ordersList = 3;
}

message OrderId {
    string id = 1;
}

message SearchRequest {
    string s = 1;
}

message OrderIdList {
    repeated string ids = 1;
}

service OrderManagement {
    rpc addOrder(Order) returns (OrderId); // addOrderRequest, AddOrderResponse
    rpc getOrder(OrderId) returns (Order);
    rpc searchOrders(SearchRequest) returns (stream Order);
    rpc updateOrders(stream Order) returns (OrderIdList);
    rpc processOrders(stream OrderId) returns (stream CombinedShipment);
}

/*

*/